# ecash-course

./: .gitignore  Cargo.toml  README.md  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
projects/00-cryptos-rs/: Cargo.toml
projects/00-cryptos-rs/examples/: verify_precomputes.rs
projects/00-cryptos-rs/src/: bitcoin.rs  block.rs  curves.rs  keys.rs  lib.rs  main.rs  ripemd160.rs  ru256.rs  secp256k1.rs  sha256.rs  signature.rs  transaction.rs  utils.rs
