[package]
name = "cryptos_rs"
version = "0.1.0"
edition = "2021"
description = "A reimplementation of Andrej Karpathy's Bitcoin Cryptos Python library in Rust + a simple CLI tool"

[lib]
name = "cryptos_rs"
path = "src/lib.rs"

[[bin]]
name = "cryptos"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.5"
num-integer = "0.1.46"
num-traits = "0.2.19"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
