[package]
name = "cryptos_rs"
version = "0.1.0"
edition = "2021"
description = "A reimplementation of Andrej Karpathy's Bitcoin Cryptos Python library in Rust + a simple CLI tool"

[lib]
name = "cryptos_rs"
path = "src/lib.rs"

[[bin]]
name = "cryptos"
path = "src/main.rs"

[dependencies]
primitive-types = "0.12.1"
hex = "0.4.3"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
sha2 = "0.10.8"
